--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,84 +7,10 @@
         "*.hpp": "cpp",
         "*.hxx": "cpp",
         "iostream": "cpp",
-        "xstring": "cpp",
-        "string": "cpp",
-        "ostream": "cpp",
-        "array": "cpp",
-        "format": "cpp",
-        "initializer_list": "cpp",
-        "list": "cpp",
-        "ranges": "cpp",
-        "span": "cpp",
-        "utility": "cpp",
-        "valarray": "cpp",
-        "vector": "cpp",
-        "xhash": "cpp",
-        "xtree": "cpp",
-        "xutility": "cpp",
-        "algorithm": "cpp",
-        "any": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "cctype": "cpp",
-        "charconv": "cpp",
-        "chrono": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "codecvt": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "exception": "cpp",
-        "filesystem": "cpp",
-        "forward_list": "cpp",
-        "fstream": "cpp",
-        "functional": "cpp",
-        "iomanip": "cpp",
-        "ios": "cpp",
-        "iosfwd": "cpp",
-        "istream": "cpp",
-        "iterator": "cpp",
-        "limits": "cpp",
-        "locale": "cpp",
-        "map": "cpp",
-        "memory": "cpp",
-        "new": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "ratio": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "unordered_map": "cpp",
-        "xfacet": "cpp",
-        "xiosbase": "cpp",
-        "xlocale": "cpp",
-        "xlocbuf": "cpp",
-        "xlocinfo": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xlocnum": "cpp",
-        "xloctime": "cpp",
-        "xmemory": "cpp",
-        "xtr1common": "cpp"
+        "ostream": "cpp"
     },
-    "c-cpp-compile-run.cpp-compiler":
-        //Para cambiar el compilador, descomentar la ruta 
-
-        "C:/Program Files (x86)/Dev-Cpp/MinGW64/bin/g++.exe",
-        //"C:/MinGW/bin/g++.exe",
+    "c-cpp-compile-run.cpp-compiler": "C:/Program Files (x86)/Dev-Cpp/MinGW64/bin/g++.exe",
     "c-cpp-compile-run.output-location": "../",
-    "c-cpp-compile-run.cpp-flags": "-Wall -Wextra -O2 -std=c++11 -static -I../include",
+    "c-cpp-compile-run.cpp-flags": "-w -O0 -std=c++11 -I../include -IC:/Progra~2/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include -IC:/Progra~2/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include",
     "C_Cpp.errorSquiggles": "disabled"
 }
