Funcion para realizar mostrar los nombres de las especies en los json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "*.hxx": "cpp",
         "iostream": "cpp",
         "ostream": "cpp",
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "vector": "cpp"
     },
     "c-cpp-compile-run.cpp-compiler": "C:/Program Files (x86)/Dev-Cpp/MinGW64/bin/g++.exe",
     "c-cpp-compile-run.output-location": "../",
