--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,6 @@
     },
     "c-cpp-compile-run.cpp-compiler": "C:/Program Files (x86)/Dev-Cpp/MinGW64/bin/g++.exe",
     "c-cpp-compile-run.output-location": "../",
-    "c-cpp-compile-run.cpp-flags": "-w -O0 -std=c++11 -I../include -IC:/Progra~2/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include", //-IC:/Progra~2/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include",
+    "c-cpp-compile-run.cpp-flags": "-static-libgcc -static-libstdc++ -lwinmm -w -O0 -std=c++11 -I../include -IC:/Progra~2/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include", //-IC:/Progra~2/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include",
     "C_Cpp.errorSquiggles": "disabled"
 }
